kubernetes/apps/kube-system/cilium/gateway/gateway.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 172.16.1.33
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.apps.mrtb.io"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.apps.mrtb.io"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: apps-mrtb-io-tls
