kubernetes/apps/kube-system/cilium/gateway/httpredirect.yaml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gateway-https-redirect
spec:
  parentRefs:
    - name: gateway
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
